Fixing white spaces

--- a/index.css
+++ b/index.css
@@ -1,42 +1,43 @@
 :root {
-  --primary-color: #6070FF;
-  --secondary-color: #7F8CFF;
-  --title-color: #172B4D;
+  --primary-color: #6070ff;
+  --secondary-color: #7F8Cff;
+  --title-color: #172b4d;
   --text-color: #344563;
-  --label-background-color: #EBEBFF;
+  --label-background-color: #ebebff;
 }
 
 body {
   background-color: #F7F7F9;
 }
-html *{
-  font-family: 'Poppins';
+
+html * {
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
 }
 
 @media (min-width: 375px) {
   #navbar {
-   display: flex;
-   justify-content: space-between;
-   height: 48px;
-   width: 375px;
-   top: 44px;
+    display: flex;
+    justify-content: space-between;
+    height: 48px;
+    width: 375px;
+    top: 44px;
   }
 
   #logo-container {
-   display: flex;
-   align-items: center;
-   text-align: center;
-   width: 100px;
-   margin-left: 24px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    width: 100px;
+    margin-left: 24px;
    /* margin-top: 14px; */
   }
 
   #navbar p {
-   color: var(--primary-color);
-   font-weight: 700;
-   font-size: 18px;
-   font-style: normal;
-   line-height: 20px;
+    color: var(--primary-color);
+    font-weight: 700;
+    font-size: 18px;
+    font-style: normal;
+    line-height: 20px;
 /*    width: 76px;
    height: 20px;  */  
   }
@@ -51,196 +52,195 @@ html *{
    height: 40px;
    right: 24px;
    top: calc(50% - 40px/2); */
-   height: 40px;
-   width: 40px;
-   top: 4px;
-   border-radius: 8px;
-   padding: 8px;
+    height: 40px;
+    width: 40px;
+    top: 4px;
+    border-radius: 8px;
+    padding: 8px;
 
   }
 
   #hamburger-container {
-   position: absolute;
-   flex: none;
-   width: 24px;
-   height: 24px;
-   display: flex;
-   flex-direction: row;
-   align-items: flex-start;
-   padding: 8px;
-   right: 24px;
+    position: absolute;
+    flex: none;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 8px;
+    right: 24px;
   }
 
   #hamburger-container .union {
-   position: absolute;
-   width: 40px;
-   height: 40px;
-   top: calc(50% - 40px/2);
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    top: calc(50% - 40px / 2);
   }
-  
+
   .union div {
-   position: absolute;
-   width: 16px;
-   left: 4px;
-   background-color: var(--primary-color);
-   border: 2px solid var(--primary-color);
-   border-radius: 8px;
+    position: absolute;
+    width: 16px;
+    left: 4px;
+    background-color: var(--primary-color);
+    border: 2px solid var(--primary-color);
+    border-radius: 8px;
   }
 
   .union .slice-1 {
-   top: 7px;
+    top: 7px;
   }
 
   .union .meat {
-   top: 12px;
+    top: 12px;
   }
 
   .union .slice-2 {
-   top: 17px;
+    top: 17px;
   }
 
   #background-mobile {
-   position: absolute;
-   width: 375px;
-   height: 718px;
-   left: 0px;
-   top: 0px;
-   background-color: #FFFFFF;
-   z-index: -1;
-   border-bottom-left-radius: 80px;
+    position: absolute;
+    width: 375px;
+    height: 718px;
+    left: 0px;
+    top: 0px;
+    background-color: #ffffff;
+    z-index: -1;
+    border-bottom-left-radius: 80px;
   }
 
   /* Shapes */
   #shapes-background {
-   position: absolute;
-   width: 462px;
-   height: 587.15px;
-   left: -34px;
-   top: 104px;
+    position: absolute;
+    width: 462px;
+    height: 587.15px;
+    left: -34px;
+    top: 104px;
   }
 
   #shapes-background img {
-   position: absolute;
+    position: absolute;
   }
 
   #shapes-background .rectangle-4 {
-   top: 14px;
-   left: 328px;
+    top: 14px;
+    left: 328px;
   }
 
   #shapes-background .ellipse-3 {
-   top: 48.24px;
-   left: 357px;
+    top: 48.24px;
+    left: 357px;
   }
 
   #shapes-background .ellipse-8 {
-   top: 6px;
-   left: 214px;
+    top: 6px;
+    left: 214px;
   }
 
   #shapes-background .rectangle-6 {
-   right: 419.27px;
+    right: 419.27px;
   }
 
   #shapes-background .ellipse-11 {
-   top: 24.64px;
-   right: 404.4px;
+    top: 24.64px;
+    right: 404.4px;
   }
 
   #shapes-background .rectangle-7 {
-   top: 44px;
-   right: 277.68px;
+    top: 44px;
+    right: 277.68px;
   }
 
   #shapes-background .ellipse-5 {
-   top: 51.81px;
-   left: 159px;
+    top: 51.81px;
+    left: 159px;
   }
 
   #shapes-background .ellipse-14 {
-   left: 332px;
-   top: 211px;
+    left: 332px;
+    top: 211px;
   }
 
   #shapes-background .ellipse-12 {
-   top: 429px;
-   left: 351px;
+    top: 429px;
+    left: 351px;
   }
 
   #shapes-background .ellipse-13 {
-   top: 440px;
-   left: 338px;
+    top: 440px;
+    left: 338px;
   }
-  
+
   #shapes-background .ellipse-15 {
-   top: 541px;
-   left: 87px;
+    top: 541px;
+    left: 87px;
   }
 
   #shapes-background .ellipse-4 {
-   top: 553.1px;
-   left: 271px;
+    top: 553.1px;
+    left: 271px;
   }
 
   #shapes-background .rectangle-5 {
-   top: 549px;
-   left: 221px;
+    top: 549px;
+    left: 221px;
   }
 
   /* HEADLINE */
   #headline {
-   display: flex;
-   flex-direction: column;
-   align-items: flex-start;
-   padding: 114px 24px;
-   gap: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 114px 24px;
+    gap: 12px;
   }
 
   #headline .headline-title {
-   color: var(--title-color);
-   font-style: normal;
-   font-weight: 700;
-   font-size: 40px;
-   line-height: 53px;
-   display: flex;
-   align-items: center;
-   margin-bottom: 0px;
+    color: var(--title-color);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 53px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0px;
   }
 
   #headline .headline-text {
-   color: var(--text-color);
-   font-style: normal;
-   font-weight: 400;
-   font-size: 16px;
-   line-height: 24px;
-   margin-top: 0px;
-   margin-bottom: 0px;
+    color: var(--text-color);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
   #headline .headline-supporting-text {
-   display: flex;
-   flex-direction: row;
-   align-items: center;
-   padding: 0px;
-   gap: 8px;
-   width: 117px;
-   height: 24px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px;
+    gap: 8px;
+    width: 117px;
+    height: 24px;
   }
 
   .headline-supporting-text p {
-   color: var(--secondary-color);
-   font-style: normal;
-   font-weight: 500;
-   font-size: 16px;
-   line-height: 24px;
+    color: var(--secondary-color);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
   }
 
   #headline .headline-social-media {
-   width: 170.17px;
-   height: 20px;
-   display: flex;
-   justify-content: space-between;
-   flex-grow: 0;
+    width: 170.17px;
+    height: 20px;
+    display: flex;
+    justify-content: space-between;
+    flex-grow: 0;
   }
-  
 }
